Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1582

maintenance manager scheduling very slow on TS with lots of data

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.10.0
    • 1.0.0
    • perf, tserver
    • None

    Description

      On a server with ~5.5TB of data, the maintenance manager scheduler thread has gotten quite slow. The thread takes many tens of seconds to pick a maintenance operation, and then the actual operations take only a few seconds to run. So, the actual "duty cycle" of those threads is quite low, and compaction/flushing falls behind.

      Attachments

        1. trace.json.gz
          57 kB
          Todd Lipcon

        Activity

          People

            tlipcon Todd Lipcon
            tlipcon Todd Lipcon
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: